# LIGGGHTS-PUBLIC

./: README  README.md  release-notes.txt
doc/: .gitignore  Makefile  Manual.html  Manual.txt  Section_commands.html  Section_commands.txt  Section_commands_LAMMPS.html  Section_commands_LAMMPS.txt  Section_errors.html  Section_errors.txt  Section_gran_models.html  Section_gran_models.txt  Section_gran_models_prev.html  Section_gran_models_prev.txt  Section_howto.html  Section_howto.txt  Section_input_script.html  Section_input_script.txt  Section_intro.html  Section_intro.txt  Section_mesh_modules.html  Section_mesh_modules.txt  Section_modify.html  Section_modify.txt  Section_packages.html  Section_packages.txt  Section_python.html  Section_python.txt  Section_start.html  Section_start.txt  atom_modify.html  atom_modify.txt  atom_style.html  atom_style.txt  bond_coeff.html  bond_coeff.txt  bond_harmonic.html  bond_harmonic.txt  bond_hybrid.html  bond_hybrid.txt  (+465 more)
doc/Eqs/: angle.tex  fix_sph_density_continuity_eq1.tex  fix_sph_density_continuity_eq2.tex  fix_sph_density_corr_eq1.tex  fix_sph_density_summation.tex  fix_sph_pressure_abs.tex  fix_sph_pressure_rel.tex  fix_sph_pressure_tait_eq1.tex  fix_sph_pressure_tait_eq2.tex  fix_wall_region_sph.tex  gran_model_hooke_hysteresis_1.tex  gran_model_hooke_hysteresis_2.tex  pair_gran_hooke_eqEpsd1.tex  pair_gran_hooke_eqEpsd2.tex  pair_gran_hooke_eqEpsd3.tex  pair_gran_hooke_eqEpsd4.tex  pair_gran_hooke_eqEpsd5.tex  pair_lubricate_GRM.tex  pair_sph_artvisc_tenscorr_eq1.tex  pair_sph_artvisc_tenscorr_eq2.tex  pair_sph_artvisc_tenscorr_eq3.tex  pair_sph_artvisc_tenscorr_eq4.tex  pair_sph_artvisc_tenscorr_eq5.tex  pair_sph_artvisc_tenscorr_eq6.tex  pair_sph_artvisc_tenscorr_eq7.tex  pair_sph_artvisc_tenscorr_eq8.tex  stress_tensor_granular.tex  viblin.tex  vibrot.tex
doc/_static/css/: theme.css
examples/LIGGGHTS/SPH/sphPoiseuille_BP_Morris/: evaluate.m  evaluate_result.txt  sphPoiseuille_BP_Morris.liggghts
examples/LIGGGHTS/SPH/sphPoiseuille_Density_Summation/: evaluate.m  evaluate_result.txt  sphPoiseuille_Density_Summation.liggghts
lib/poems/: Makefile.g++  SystemProcessor.h  body.cpp  body.h  onbody.cpp  onsolver.cpp  poemsobject.cpp  poemstree.h  poemstreenode.h  solver.cpp  solver.h  sphericalFlexiblejoint.cpp  sphericalFlexiblejoint.h  sphericaljoint.cpp  sphericaljoint.h  system.cpp  system.h  workspace.cpp  workspace.h
lib/poems/doc/: interface_LIGGGHTS.md
lib/reax/: Makefile.gfortran
python/: README  install.py  liggghts.py
python/examples/: demo.py  gui.py  in.simpExample  plot.py  simpExample.py  simple.py  trivial.py  viz_atomeye.py  viz_gl.py  viz_pymol.py  viz_vmd.py  vizplotgui_atomeye.py  vizplotgui_gl.py  vizplotgui_pymol.py  vizplotgui_vmd.py
python/examples/pizza/: pdbfile.py  vmd.py
src/: .gitignore  CMakeLists.txt  Depend.sh  Install.sh  Make.py  Make.sh  Makefile  Makefile.lib  Makefile.list  Makefile.shlib  abstract_mesh.h  accelerator_cuda.h  accelerator_omp.h  angle.cpp  angle.h  angle_hybrid.cpp  angle_hybrid.h  associative_pointer_array.h  associative_pointer_array_I.h  atom.cpp  atom.h  atom_map.cpp  atom_masks.h  atom_vec.cpp  atom_vec.h  atom_vec_atomic.cpp  atom_vec_atomic.h  atom_vec_body.cpp  atom_vec_charge.cpp  atom_vec_charge.h  atom_vec_convexhull.h  atom_vec_ellipsoid.cpp  atom_vec_ellipsoid.h  atom_vec_hybrid.cpp  atom_vec_hybrid.h  atom_vec_line.cpp  atom_vec_line.h  atom_vec_molecular.h  atom_vec_sph.cpp  atom_vec_sph.h  (+879 more)
src/ASPHERE/: compute_erotate_asphere.cpp  compute_erotate_asphere.h  fix_nve_asphere.cpp  fix_nve_asphere.h  fix_nve_asphere_noforce.cpp  fix_nve_asphere_noforce.h  fix_nve_line.cpp  fix_nve_line.h  pair_line_lj.cpp
src/MAKE/: CMakeLists_Catalyst.txt  Makefile.auto  Makefile.clang  Makefile.fedora  Makefile.fedora_debug  Makefile.fedora_debug_opt  Makefile.fedora_fpic  Makefile.fedora_fpic_debug  Makefile.fedora_fpic_debug_vtk  Makefile.fedora_gp  Makefile.fedora_vtk_fpic  Makefile.fedora_vtk_fpic_debug  Makefile.g++_mingw64  Makefile.lise_fpic  Makefile.mac_brew  Makefile.mac_brew_mpi  Makefile.mpi  Makefile.serial  Makefile.serial_icc  Makefile.ubuntuVTK  Makefile.ubuntuVTK6  Makefile.ubuntuVTK_debug  Makefile.ubuntuVTK_fpic  Makefile.ubuntuVTK_fpic_debug  Makefile.ubuntu_15p10_vtk  Makefile.ubuntu_15p10_vtk_debug  Makefile.ubuntu_15p10_vtk_fpic  Makefile.ubuntu_convex_vtk5p10  Makefile.user_default  Makefile.user_default_patch_1.0  Makefile.user_default_patch_1.1  Makefile.user_default_patch_1.2  Makefile.user_default_patch_1.3
src/MAKE/deprecated/: Makefile.fedora  Makefile.fedora_debug  Makefile.fedora_fpic  Makefile.fedora_vtk_fpic  Makefile.fedora_vtk_fpic_debug  Makefile.mingw  Makefile.ubuntuVTK  Makefile.ubuntuVTK6  Makefile.ubuntuVTKConvex  Makefile.ubuntuVTKConvex_debug  Makefile.ubuntuVTK_fpic_debug  _README
src/MISC/: fix_efield.cpp
src/MOLECULE/: atom_vec_bond.cpp  atom_vec_bond.h  atom_vec_full.cpp  atom_vec_full.h  atom_vec_molecular.cpp  bond_harmonic.cpp  bond_harmonic.h
src/PASCAL/: Install.sh  fix_pascal_couple.cpp  fix_pascal_couple.h
src/PERI/: pair_peri_lps.cpp
src/POEMS/: Install.sh  fix_poems.cpp  fix_poems.h
src/RIGID/: fix_rigid.cpp  fix_rigid.h  fix_rigid_small.cpp
src/STUBS/: mpi.c  mpi.h
src/VORONOI/: compute_voronoi_atom.cpp  compute_voronoi_atom.h
src/WINDOWS/: GenerateHeaders.bat  LAMMPS.sln  LAMMPS.vcproj  LIGGGHTS-PUBLIC.vcxproj  LIGGGHTS-PUBLIC_VS2012.sln  LIGGGHTS.vcxproj  LIGGGHTS_VS2012.sln  README-PUBLIC_VS2012.txt  README_VS2012.txt  STUBS.vcproj  STUBS.vcxproj  UpgradeLog.XML
src/WINDOWS/_UpgradeReport_Files/: UpgradeReport.xslt
src/WINDOWS/extra/: erf.h  erf_namd.c  unistd.h
src/WINDOWS/extra/fftw2/: fftw.h
src/WINDOWS/extra/fftw2/x64/: FFTW2dll.exp  FFTW2dll.lib  FFTW2st.lib  RFFTW2dll.lib  RFFTW2st.lib
src/WINDOWS/extra/sys/: time.h
src/WINDOWS/settings/: style_atom.h  style_bond.h  style_command.h  style_compute.h  style_dump.h  style_fix.h  style_integrate.h  style_pair.h  style_region.h
src/cMake/: Macros.cmake  Model.cmake  Style.cmake  Version.cmake
tools/: restart2data.cpp
(+595 files in other folders)
